- decreased minimum allowed window scale for engine and game
- increased max and decreased min compiler window allowed scale in engine
- returned back to old gameobject.txt for each gameobject txt file name instead of naming each gameobject txt file name as the name of the actual gameobject

0.1.3.0008:
- fixed mesh component height in inspector for empty gameobject
- fixed light component height in inspector for point, spot and directional lights
- added mesh type to mesh component in inspector for all gameobjects
- fixed light type icon not updating correctly if light type was changed from inspector
- fixed light icon type staying after light component was removed from gameobject from inspector
- fixed audio files not being deletable in project hierarchy audio folder
- fixed volume slider in audio component in inspector not being draggable like min and max range while 3D audio is enabled
- fixed audio, camera, point, spot and dir light gameobject staying after deleting it - billboard was deleted but the gameobject stayed and trying to save caused a crash
- engine, engine library, game and hub no longer need to be rebuilt every time

0.1.3.0009:
- completely scrapped all old object interaction and added imguizmo
- deleted old object interaction textures
- removed x, y, z buttons in the top of the scene window
- added world/local button next to move, scale and rotate
- pressing key of currently selected mode toggles between world and local object move/rotate/scale
- fixed a small issue with compiling in clean mode on windows
- all models can now cast shadows
- added shadow cast toggle to inspector to the top material component
- moved transparency toggle and strength above texture assign slots and below shadow cast toggle in inspector for material component
- critical shader and texture errors now show an error popup which closes the engine right after pressing ok