@@ -35,7 +35,8 @@ namespace Graphics::Shape
 			const string& txtFilePath = "",
 			const vec3& diffuse = vec3(1),
 			const float& intensity = 1.0f,
-			const float& distance = 1.0f,
+			const float& farPlane = 1.0f,
+			const float& nearPlane = 0.5f,
 			string& name = tempName,
 			unsigned int& id = tempID,
 			const bool& isEnabled = true,
