@@ -40,7 +40,8 @@ namespace Graphics::Shape
 			const string& txtFilePath = "",
 			const vec3& diffuse = vec3(1),
 			const float& intensity = 1.0f,
-			const float& distance = 1.0f,
+			const float& farPlane = 1.0f,
+			const float& nearPlane = 0.5f,
 			const float& innerAngle = 12.5f,
 			const float& outerAngle = 17.5f,
 			string& name = tempName,
