@@ -675,6 +675,7 @@ namespace Graphics::GUI
 								vec3(1),
 								1.0f,
 								1.0f,
+								0.5f,
 								targetName,
 								nextID,
 								true,
@@ -717,6 +718,7 @@ namespace Graphics::GUI
 								vec3(1),
 								1.0f,
 								1.0f,
+								0.5f,
 								12.5f,
 								17.5f,
 								targetName,
