@@ -99,3 +99,4 @@
 - added shadow cast toggle to inspector to the top material component
 - moved transparency toggle and strength above texture assign slots and below shadow cast toggle in inspector for material component
 - critical shader and texture errors now show an error popup which closes the engine right after pressing ok
+- replaced distance value for point light and spotlight with far and near plane for shadows, this does not affect directional lights, they still only use distance
